--- a/pepeizqs deals web/Pages/Admin/Pendientes.cshtml
+++ b/pepeizqs deals web/Pages/Admin/Pendientes.cshtml
@@ -16,6 +16,6 @@
 {
 	@if (await UsuarioCoger.RolDios(UserManager, User) == true)
 	{
-		@(await Html.RenderComponentAsync<Componentes.Admin.Pendientes>(RenderMode.ServerPrerendered))
+		@(await Html.RenderComponentAsync<Componentes.Admin.Pendientes>(RenderMode.Server))
 	}
 }
