--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -154,7 +154,7 @@
                     <ul class="navbar-nav flex-grow-1" style="align-items: center; margin-top: 0px;">
                         @if (usuarioLogeado == true && adminLogeado == true)
                         {
-                            @(await Html.RenderComponentAsync<Componentes.Secciones.Admin>(RenderMode.Server))
+                            @(await Html.RenderComponentAsync<Componentes.Admin.Maestro>(RenderMode.Server))
                         }
 
                         <li class="nav-item">
